hphp/test/slow/enum-invalid-base/noreturn.php.expectf
Fatal error: Invalid base type for enum MyEnum in %s/slow/enum-invalid-base/noreturn.php on line 3
